# viaABC

./: .gitignore  README.md  dataset.py  dataset_triplet.py  generate_training_data.py  hpd.py  inference_utils.py  latent_abc_pmc.py  latent_abc_smc.py  lightning_module.py  metrics.py  models.py  pos_embed.py  requirements.txt  run_abcpmc.py  run_abcsmc.py  run_abcsmc.sh  run_finetune.py  run_finetune.sh  run_generate_simulations.sh  run_pretrain.py  run_pretrain.sh  run_pretrain_multitasks.sh  run_pretrain_spatial.py  run_pretrain_spatial_2d.py  run_pretrain_triplet.py  run_pretrain_triplet.sh  scaler.py  systems.py  systems_pmc.py  test.py  train_model.py  train_model.sh  truncnorm.ipynb  utils.py  viaABC.py  video_vit.py
bash_scripts/: run_abcpmc.sh  run_generate_simulations.sh  run_pretrain.sh  run_pretrain_spatial.sh  run_viaabc.sh  run_viaabc_sirs.sh
configs/: inference.yaml  train.yaml
data/: initial_grid1_cpp.txt  initial_grid3_cpp.txt
notebooks_bcell/: 1.data_preprocessing.ipynb  2.setup.ipynb  3.1validation.ipynb  3.train.ipynb  4.inference.ipynb  5.posterior_check.ipynb  truncnorm.ipynb
notebooks_lotka/: figure_2.ipynb  lotka_volterra_model.stan  results.ipynb  utils.py
notebooks_mzb/: ABC-SMC.ipynb  data_fix.ipynb  eda.ipynb  mzb_data_preprocessing.ipynb  posterior.ipynb  run_abcpmc.ipynb  run_abcsmc.ipynb  run_abcsmc_MTM.ipynb
notebooks_sir/: aggregate_particles.py  beta_metric_experiments.csv  (+5 more)
src/viaABC/spatial2D/: CMakeLists.txt  __init__.py  bindings.cpp  grid.cpp  grid.hpp  grid_api.cpp  grid_api.pyx  setup.py  spatial2d_cy.pyx  test.ipynb
(+139 files in other folders)
